--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,9 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
+
+/composer.lock
+/config
+/database/migrations
+/public/vendor
+/resources/lang
