--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "tanwencn/tanecn",
+    "description": "The Multilingual PHP CMS built with Laravel and bootstrap.",
+    "keywords": ["laravel", "blog", "cms", "ecommerce", "shop", "mall", "themes", "admin", "menu"],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -41,9 +41,6 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
